# PagarMeChallenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
api/adapters/controller/: routes.py
api/adapters/controller/accounts/: routes.py
api/adapters/controller/main/: routes.py
api/adapters/controller/parser/: account.py
api/adapters/controller/transactions/: routes.py
api/adapters/repository/: account_repository.py  base_repository.py  debit_card_repository.py  transaction_repository.py
api/adapters/repository/interfaces/: account_repository_interface.py  card_repository_interface.py  (+2 more)
api/entities/: account.py  card.py  credit_card.py  debit_card.py  transaction.py
api/entities/account/: account.py
api/entities/card/: card.py  credit_card.py  debit_card.py
api/entities/interfaces/: account_interface.py  card_interface.py  credit_card_interface.py
api/entities/transaction/: dabit_transaction.py  transaction.py
api/infra/config/: env.py
api/infra/db/: mongo.py  sqlite.py
api/infra/entrypoint/: __init__.py  run.py
api/useCases/: account.py  debit_transaction.py
api/useCases/interfaces/: account_use_case.py  credit_transaction_use_case.py  debit_transaction_use_case.py
tests/: test_account_entity.py  test_transaction.py  test_transaction_entity.py
tests/e2e/: test_account.py  test_transaction.py
tests/http/: test_account.py  test_index.py
tests/stress/: locust_file.py
tests/unit/: test_account_repository.py  test_mongo_implementation.py
(+15 files in other folders)
