[tool.poetry]
name = "pagarmechallenge"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fast-sql-manager="^1.2.3"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
fast-nosql-manager = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
